--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,21 @@
-# Godot 4+ specific ignores
-.godot/
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
-# Dummy HTML5 export presets file for continuous integration
-!.github/dist/export_presets.cfg
-
-# Imported translations (automatically generated from CSV files)
-*.translation
-
-# Mono-specific ignores
-.mono/
-data_*/
-mono_crash.*.json
-
-# System/tool-specific ignores
-.directory
-.DS_Store
-*~
-*.blend1
+env
+venv
 .vscode
+__pycache__
+public
+pids
+logs
 node_modules
+npm-debug.log
+coverage/
+run
+.DS_Store
+.nyc_output
+.basement
+config.local.js
+basement_dist
+.idea
+.yarnrc
+dist
+.venv
+.pdm-python
